site: fix menu value & code overflow

--- a/demo/styles/demo.css
+++ b/demo/styles/demo.css
@@ -47,4 +47,5 @@ body {
 
 .md-card {
   margin-bottom: 16px;
+  overflow: auto;
 }
